--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@
   <h2>Projects</h2>
   <div class="portfolio-grid">
     <div class="card">
-      <img src="tic-tac-toe.png" alt="Tic Tac Toe Game">
+      <a href="https://vedulasrivalli.github.io/TicTacToe/" target="_blank">
+      <img src="tic-tac-toe.png" alt="Tic Tac Toe Game"> </a>
       <h3>Tic Tac Toe Game</h3>
       <p>A web-based interactive Tic Tac Toe game built with HTML, CSS, and JavaScript.</p>
     </div>
@@ -570,4 +571,5 @@
 
 </body>
 </html>
+
 
