--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vedula Srivalli – Web Developer</title>
+  <title>Vedula Srivalli – Portfolio</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -571,5 +571,6 @@
 
 </body>
 </html>
+
 
 
